Fix paddin on mobile in main

--- a/app/globals.css
+++ b/app/globals.css
@@ -74,7 +74,7 @@ main {
 /* ================= HERO ================= */
 
 
-@layer components {
+
 
   :root {
     --brand-blue: #3b82f6;    
@@ -236,8 +236,10 @@ main {
     #hero .hero-stats {
       grid-template-columns: 1fr;
     }
+    #hero {
+      padding-top: 6rem;
+    }
   }
-}
 
 
 /* ========== BLOG LIST PAGE ========== */
@@ -431,6 +433,12 @@ main {
   display: flex;
   align-items: center;
   gap: 0.4rem;
+}
+
+@media (max-width: 900px) {
+ .blog-grid {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
 }
 
 
@@ -991,25 +999,6 @@ main {
   scrollbar-width: thin;                
   scrollbar-color: #334155 #0f172a;     
 }
-
-.notification-list::-webkit-scrollbar {
-  width: 6px;
-}
-
-.notification-list::-webkit-scrollbar-track {
-  background: #0f172a;      
-}
-
-.notification-list::-webkit-scrollbar-thumb {
-  background-color: #334155;
-  border-radius: 10px;
-}
-
-.notification-list::-webkit-scrollbar-thumb:hover {
-  background-color: #475569;
-}
-
-
 
 /* ===== CART PAGE ===== */
 .cart {
@@ -2579,7 +2568,7 @@ main {
 }
 .mobile-services-overlay {
   position: fixed;
-  top: 79px;       
+  top: 64px;       
   left: 0;
   right: 0;
   bottom: 0;
@@ -2623,8 +2612,21 @@ main {
 
 .mobile-services-body {
   overflow-y: auto;
-  height: calc(100% - 60px);
-  padding-right: .3rem;
+  height: calc(100% - 100px);
+  -webkit-overflow-scrolling: touch; 
+}
+
+.mobile-services-body::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+.mobile-services-body {
+  scrollbar-width: none;
+}
+
+.mobile-services-body {
+  -ms-overflow-style: none;
 }
 
 .mobile-service-category {
@@ -5471,6 +5473,14 @@ box-shadow:
   line-height: 1.4;
 }
 
+@media (max-width: 600px) {
+  .footer-contact{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 
 /* ===== Social & Trust ===== */
 .footer-middle {
@@ -5479,7 +5489,7 @@ box-shadow:
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #333;
-  padding: 1.5rem 0;
+  padding: 1.5rem;
 }
 
 .footer-social {
@@ -5555,8 +5565,13 @@ box-shadow:
 @media (max-width: 768px) {
   .footer-top,
   .footer-middle {
+    display: flex;
+    align-items: center;
     flex-direction: column;
     text-align: center;
+  }
+  .footer-brand {
+    justify-content: center;
   }
 
   .footer-middle {
